[project]
name = "langfuse-test"
version = "1.0.0"
description = "Langfuse 최신 버전 통합 테스트 환경"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langfuse>=2.54.4",
    "langchain==1.0.4",
    "langchain-openai>=0.2.11",
    "langchain-community>=0.3.13",
    "openai>=1.58.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
