[project]
name = "langfuse-test"
version = "1.0.0"
description = "Langfuse 최신 버전 통합 테스트 환경"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langfuse>=2.54.4",
    "langchain==1.0.4",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.13",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 예제 스크립트는 패키징하지 않음 (독립 실행형)
packages = []

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
